Swagger documentation code adjustment and some indentation adjustments.
